--- a/man/tuned.conf.5
+++ b/man/tuned.conf.5
@@ -2,8 +2,8 @@
 .SH NAME
 tuned.conf - Tuned profile definition
 .SH DESCRIPTION
-This man page documents format of Tuned 2.0 profile definition files. Profile is
-stored in /etc/tuned/<profile_name>/tuned.conf or in 
+This man page documents format of Tuned 2.0 profile definition files.
+The profile definition is stored in /etc/tuned/<profile_name>/tuned.conf or in
 /usr/lib/tuned/<profile_name>/tuned.conf file where the /etc/tuned/ directory has 
 higher priority.
 
@@ -14,9 +14,9 @@ The main section is called "[main]" and can contain following options:
 
 .TP
 include=
-Includes config file defined as value. Config file can be defined as full path
-or by the profile name to which it belongs.
-If this parameter is present, the histogram will be shown at the end of the measurement.
+Includes a profile with the given name. This allows you to base a new profile
+on an already existing profile. In case there are conflicting parameters in the
+new profile and the base profile, the parameters from the new profile are used.
 
 .SH PLUGINS
 Every other section defines one plugin. The name of the section is used as name
@@ -30,9 +30,9 @@ Every plugin section can contain following sections:
 .TP
 type=
 Plugin type. Currently there are following upstream plugins: audio, bootloader, cpu, disk,
-eeepc_she, mounts, net script, selinux, scheduler, sysctl, sysfs, usb, video, vm. This
-list may be incomplete. If you installed tuned through RPM you can list upstream plugins by
-the following command:
+eeepc_she, modules, mounts, net, script, scsi_host, selinux, scheduler, sysctl,
+sysfs, systemd, usb, video, vm. This list may be incomplete. If you installed
+tuned through RPM you can list upstream plugins by the following command:
 .B rpm -ql tuned | grep 'plugins/plugin_.*.py$'
 Check the plugins directory returned by this command to see all plugins (e.g. plugins
 provided by 3rd party packages).
