--- a/man/tuned-profiles-cpu-partitioning.7
+++ b/man/tuned-profiles-cpu-partitioning.7
@@ -23,18 +23,18 @@
 tuned\-profiles\-cpu\-partitioning - Partition CPUs into isolated and housekeeping.
 
 .SH DESCRIPTION
-The cpu-partitioning profile partitions the system CPUs into isolated and
-housekeeping CPUs. This profile is intended to be used for latency-sensitive
+The cpu\-partitioning profile partitions the system CPUs into isolated and
+housekeeping CPUs. This profile is intended to be used for latency\-sensitive
 workloads.
 
 An isolated CPU incurs reduced jitter and reduced interruptions by the
-kernel. This is achived by clearing the CPU from user-space processes, movable
+kernel. This is achived by clearing the CPU from user\-space processes, movable
 kernel threads, interruption handlers, kernel timers, etc. The only fixed
 source of interruptions is the 1Hz tick maintained by the kernel to keep
 CPU usage statistics. Otherwise, the incurred jitter and interruptions, if
 any, depend on the kernel services used by the thread running on the isolated
 CPU. Threads that run a busy loop without doing system calls, such as
-user-space drivers that access the hardware directly, are only expected to
+user\-space drivers that access the hardware directly, are only expected to
 be interrupted once a second by the 1Hz tick.
 
 A housekeeping CPU is the opposite of an isolated CPU. Housekeeping CPUs
@@ -48,49 +48,49 @@ The cpu-partitioning profile is configured by editing the
 file. There are two configuration options:
 
 .TP
-.B isolated_cores=<CPU-LIST>
+.B isolated_cores=<CPU\-LIST>
 List of CPUs to isolate. This option is mandatory. Any CPUs not in this list
 is automatically considered a housekeeping CPU.
 .TP
-.B no_balance_cores=<CPU-LIST>
+.B no_balance_cores=<CPU\-LIST>
 List of CPUs not be considered by the kernel when doing system wide
-process load-balancing. Usually, this list should be the same as
+process load\-balancing. Usually, this list should be the same as
 isolated_cores=. This option is optional.
 
 .SH IMPORTANT NOTES
 
 .IP * 2
-.B The system should be rebooted after applying the cpu-partitioning profile
+The system should be rebooted after applying the cpu\-partitioning profile
 for the first time or changing its configuration
 .IP *
-.B The cpu-partitioning profile can be used in bare-metal and virtual machines
+The cpu\-partitioning profile can be used in bare\-metal and virtual machines
 .IP *
-.B The cpu-partitioning profile does not use the kernel's isolcpus= feature
+The cpu\-partitioning profile does not use the kernel's isolcpus= feature
 .IP *
-.B On a NUMA system, it is recommended to have at least one housekeeping CPU
+On a NUMA system, it is recommended to have at least one housekeeping CPU
 per NUMA node
 .IP *
-.B The cpu-partitioning profile does not support isolating the L3 cache. This
+The cpu\-partitioning profile does not support isolating the L3 cache. This
 means that a housekeeping CPU can still thrash cache entries pertaining to
 isolated CPUs. It is recommended to use cache isolation technologies to remedy
 this problem, such as Intel's Cache Allocation Technology
 .IP *
-.B Whether or not the kernel is going to be able to deactivate the tick on
+Whether or not the kernel is going to be able to deactivate the tick on
 isolated CPUs depend on a few factors concerning the running thread behavior.
 Please, consult the nohz_full documentation in the kernel to learn more
 .IP *
-.B The Linux real-time project has put together a document on the best
-practices for writting real-time applications. Even though the
-cpu-partitioning profile does not guarantee real-time response time, much
-of the techniques for writting real-time applications also apply for
-applications intended to run under the cpu-partitioning profile. Please,
+The Linux real\-time project has put together a document on the best
+practices for writting real\-time applications. Even though the
+cpu\-partitioning profile does not guarantee real\-time response time, much
+of the techniques for writting real\-time applications also apply for
+applications intended to run under the cpu\-partitioning profile. Please,
 refer to this document at
 .I https://rt.wiki.kernel.org
 
 .SH "FILES"
 .nf
-.I /etc/tuned/cpu-partitioning-variables.conf
-.I /etc/tuned/tuned-main.conf
+.I /etc/tuned/cpu\-partitioning\-variables.conf
+.I /etc/tuned/tuned\-main.conf
 
 .SH "SEE ALSO"
 .BR tuned (8)
