--- a/TODO
+++ b/TODO
@@ -5,3 +5,6 @@
   disconnects from DBus.
 * Use only one timer for destroying log handlers at a time. Create a new
   timer as necessary when the old timer fires.
+* Handle signals in tuned-adm so that the log_capture_finish() DBus call
+  is called even if we receive a signal. This may require some rewriting
+  of tuned-adm.
