--- a/doc/manual/README.adoc
+++ b/doc/manual/README.adoc
@@ -16,3 +16,18 @@ This generates the `master.html` file, which you can open with your web browser.
 
 The `master.adoc` file is the main entry point for the documentation. It _includes_ (or, imports, loads) _assembly_ files from the `assemblies/` directory, which represent user stories. These assembly files then include _modules_ located in `modules/performance/`. Modules are reusable sections of content representing a concept, a procedure, or a reference.
 
+== Naming conventions
+
+Use the following naming conventions when referring to Tuned and its components in the documentation:
+
+* "the *Tuned* application", referring to the complete set of software, including executables, profiles, scripts, documentation, artwork, etc. Written as `the \*Tuned* application` in AsciiDoc, because application names are in bold text.
+
+* "the Tuned project", referring to the developers and contributors, the web pages, repositories, planning, etc.
+
+* "the `tuned` service", referring to the `tuned.service` systemd unit and the `tuned` executable
+
+* "the `tuned-adm` utility", referring to the `tuned-adm` executable
+
+* "the `tuned` and `tuned-adm` commands", referring to the text typed into the terminal to run components of Tuned
+
+This is consistent with other naming schemes. For example, consider "the Firefox application" vs. "the `firefox` command".
