--- a/doc/manual/modules/performance/ref_built-in-functions-available-in-tuned-profiles.adoc
+++ b/doc/manual/modules/performance/ref_built-in-functions-available-in-tuned-profiles.adoc
@@ -1,7 +1,7 @@
 [id="built-in-functions-available-in-tuned-profiles_{context}"]
 = Built-in functions available in Tuned profiles
 
-The following built-in functions are available in all Tuned profiles:
+The following built-in functions are available in all *Tuned* profiles:
 
 `PROFILE_DIR`::
 Returns the directory path where the profile and the `tuned.conf` file are located.
