Clarified real-time profiles on RHEL; RHBZ#1671105

--- a/doc/manual/modules/performance/ref_tuned-profiles-distributed-with-red-hat-enterprise-linux.adoc
+++ b/doc/manual/modules/performance/ref_tuned-profiles-distributed-with-red-hat-enterprise-linux.adoc
@@ -92,13 +92,22 @@ Use the `atomic-host` profile on physical machines, and the `atomic-guest` profi
 [discrete]
 == Real-time profiles
 
-// TODO: What are these? Profiles for real-time-enabled systems? Profiles that make your system real-time?
+Real-time profiles are intended for systems running the real-time kernel. Without a special kernel build, they do not configure the system to be real-time. On RHEL, the profiles are available from additional repositories.
 
 The following real-time profiles are available:
 
 `realtime`::
-Available from the [package]`tuned-profiles-realtime` package.
+Use on bare-metal real-time systems.
++
+Provided by the [package]`tuned-profiles-realtime` package, which is available from the RT or NFV repositories.
 
-`realtime-virtual-host` and `realtime-virtual-guest`::
-Available from the [package]`tuned-profiles-nfv` package.
+`realtime-virtual-host`::
+Use in a virtualization host configured for real-time.
++
+Provided by the [package]`tuned-profiles-nfv-host` package, which is available from the NFV repository.
+
+`realtime-virtual-guest`::
+Use in a virtualization guest configured for real-time.
++
+Provided by the [package]`tuned-profiles-nfv-guest` package, which is available from the NFV repository.
 
