--- a/man/tuned.8
+++ b/man/tuned.8
@@ -59,7 +59,7 @@ Show version information.
 .SH "FILES"
 .nf
 /etc/tuned
-/usr/share/doc/tuned/README
+/usr/share/doc/tuned\fR[\fI-version\fR]/README
 .SH "SEE ALSO"
 .LP
 tuned.conf(5)
