--- a/doc/manual/modules/performance/proc_creating-new-tuned-profiles.adoc
+++ b/doc/manual/modules/performance/proc_creating-new-tuned-profiles.adoc
@@ -32,7 +32,7 @@ energy_perf_bias=normal
 timeout=10
 
 [video]
-radeon_powersave=dpm-balanced, auto
+radeon_powersave=level-auto, dpm-balanced, auto
 
 [scsi_host]
 alpm=medium_power
