Project renamed to TuneD
There is now capital 'D' to clarify pronunciation.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Web page license / trademarks
 -----------------------------
 
-Copyright (C) 2008-2017 Red Hat, Inc.
+Copyright (C) 2008-2021 Red Hat, Inc.
 
 The web page and associated graphics except the Red Hat logo are licensed
 under Creative Commons Attribution-ShareAlike 3.0 license
@@ -16,7 +16,7 @@ https://www.redhat.com/en/about/trademark-guidelines-and-policies
 Graphics / web page authors
 ---------------------------
 
-The Tuned icon and header (banner) were created by Mariia Leonova
+The TuneD icon and header (banner) were created by Mariia Leonova
 <mleonova@redhat.com>.
 
 There are other contributors. In case you want to contact individual
