--- a/README
+++ b/README
@@ -49,13 +49,13 @@ To disable all tunings, run:
 To show information/description of given profile or current profile if no profile is specified, run:
 # tuned-adm profile_info
 
-To verifies current profile against system settings, run:
+To verify current profile against system settings, run:
 # tuned-adm verify
 
-Enable automatic profile selection mode, switch to the recommended profile, run:
+To enable automatic profile selection mode, switch to the recommended profile, run:
 # tuned-adm auto_profile
 
-Show current profile selection mode, run:
+To show current profile selection mode, run:
 # tuned-adm profile_mode
 
 # tuned-adm recommend
