--- a/man/tuned-profiles-sap-hana.7
+++ b/man/tuned-profiles-sap-hana.7
@@ -30,8 +30,8 @@ The following profiles are provided:
 
 .TP
 .BI "sap\-hana"
-A performance optimized profile for the SAP HANA applications. It disables
-power saving mechanisms and enables sysctl settings that improve throughput
+A performance optimized profile for the SAP HANA applications. It allows
+sleep states down to C3 and enables sysctl settings that improve throughput
 performance of disk and network IO. CPU governor is set to performance and CPU
 energy performance bias is set to performance. It also disables transparent
 hugepages, locks CPU to the low C states (by PM QoS) and tunes sysctl regarding
